# nbs_bi

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  PROGRESS.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml  secrets.toml.example
data/card_fees/: card_fees_template.csv
data/invoices/: Invoice-NKEMEJLO-0008-actuals.json  Invoice-NKEMEJLO-0009-actuals.json
docs/: PROGRESS.md
docs/dev/: scaffold_project.md  session_memory_protocol.md
docs/specs/: ai_usage.md  card_usage_forecast.md  cards.md  clients.md  database.md  marketing.md  onramp.md  reporting.md
nbs_bi/: __init__.py  config.py
nbs_bi/ai_usage/: __init__.py
nbs_bi/cards/: __init__.py  analytics.py  invoice_parser.py  models.py  preprocess_invoices.py  simulator.py
nbs_bi/clients/: __init__.py  ads_upload.py  campaigns.py  models.py  queries.py  report.py  segments.py
nbs_bi/onramp/: __init__.py  models.py  queries.py  report.py
nbs_bi/reporting/: __init__.py  cards.py  clients.py  dashboard.py  export.py  marketing.py  overview.py  ramp.py  theme.py
nbs_bi/swaps/: SPEC.md  __init__.py
nbs_bi/transactions/: SPEC.md  __init__.py
notebooks/: cards.ipynb
tests/cards/: test_analytics.py  test_simulator.py
tests/clients/: test_campaigns.py  test_models.py  test_queries.py  test_segments.py
tests/onramp/: test_models.py  test_report.py
tests/reporting/: test_cards.py  test_marketing.py  test_ramp.py
